# squrrl

./: pyproject.toml  ruff.toml
scripts/: fmt.sh  run_test.sh
src/squrrl/: __init__.py  constructor.py  core.py  core_draft.py  core_draft_test.py  core_test.py  db_object.py  select.py  utils.py
