[project]
name = "squrrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic"]

[dependency-groups]
dev = [
    "pypika>=0.48.9",
    "squrrl",
]

[tool.uv.sources]
squrrl = { workspace = true }
